<resources>
    <string name="app_name" translatable="false">Moviee</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_playing">Now Playing</string>
    <string name="nav_upcoming">Upcoming Movies</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorite">My Favorite</string>
    <string name="nav_settings">Settings</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    <!-- PREFERENCE -->
    <string name="key_language" translatable="false">pref_language</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_summary">English</string>
    <string-array name="pref_language_value">
        <item>English</item>
        <item>Indonesian</item>
    </string-array>
    <string-array name="pref_language_key">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="key_daily" translatable="false">pref_daily</string>
    <string name="title_daily">Daily Reminder</string>
    <string name="summary_daily">Just daily annoying notification</string>

    <string name="key_today" translatable="false">pref_today</string>
    <string name="title_today">New Movies Notification</string>
    <string name="summary_today">You\'ll be notified when new movies released today</string>

    <string name="widget_empty">NO DATA</string>

    <string name="daily_title" translatable="false">Moviee</string>
    <string name="daily_content">We miss you!</string>
    <string name="daily_subtitle">There are a lot upcoming movies</string>

    <string name="today_title" translatable="false">TITLE</string>
    <string name="today_content">is released today</string>
    <string name="today_subtitle">Click for detail</string>


</resources>
