<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.ListPreference
        android:key="@string/key_language"
        android:title="@string/pref_language"
        android:summary="@string/pref_language_summary"
        android:entries="@array/pref_language_value"
        android:entryValues="@array/pref_language_key"
        />

    <android.support.v7.preference.SwitchPreferenceCompat
        android:key="@string/key_daily"
        android:title="@string/title_daily"
        android:summary="@string/summary_daily"
        android:defaultValue="true" />

    <android.support.v7.preference.SwitchPreferenceCompat
        android:key="@string/key_today"
        android:title="@string/title_today"
        android:summary="@string/summary_today"
        android:defaultValue="true" />

</android.support.v7.preference.PreferenceScreen>
