<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_playing"
            android:icon="@drawable/ic_play_circle_outline_white_24dp"
            android:title="@string/nav_playing" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_date_range_white_24dp"
            android:title="@string/nav_upcoming" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_white_24dp"
            android:title="@string/nav_favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/nav_settings"
            />
    </group>
</menu>
